// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom background - new way 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`custom background - new way 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`disable dmg icon (light), bundleVersion 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`disable dmg icon (light), bundleVersion 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > background color 1`] = `
{
  "backgroundColor": "orange",
  "contents": [
    {
      "x": 130,
      "y": 220,
    },
    {
      "path": "/Applications",
      "type": "link",
      "x": 410,
      "y": 220,
    },
  ],
  "format": "UDRO",
  "writeUpdateInfo": false,
}
`;

exports[`dmg > background color 2`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "BackgroundColor-1.1.0.dmg",
    },
  ],
}
`;

exports[`dmg > background color 3`] = `
{
  "CFBundleDisplayName": "BackgroundColor",
  "CFBundleExecutable": "BackgroundColor",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "BackgroundColor",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > bundleShortVersion 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "BundleShortVersion-2017.1-alpha5.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "BundleShortVersion-2017.1-alpha5.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > bundleShortVersion 2`] = `
{
  "CFBundleDisplayName": "BundleShortVersion",
  "CFBundleExecutable": "BundleShortVersion",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "BundleShortVersion",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "2017.1-alpha5",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > custom background - new way 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > custom background - new way 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > disable dmg icon (light), bundleVersion 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > disable dmg icon (light), bundleVersion 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > dmg 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "DefaultDmg-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "DefaultDmg-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > dmg 2`] = `
{
  "CFBundleDisplayName": "DefaultDmg",
  "CFBundleExecutable": "DefaultDmg",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "DefaultDmg",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > license buttons config 1`] = `
{
  "$schema": "https://github.com/argv-minus-one/dmg-license/raw/master/schema.json",
  "body": [
    {
      "lang": "en-US",
    },
    {
      "lang": "fr-FR",
    },
    {
      "lang": "ja-JP",
    },
    {
      "lang": "ko-KR",
    },
  ],
  "labels": [
    {
      "agree": "Agree",
      "disagree": "Disagree",
      "lang": "en-US",
      "languageName": "English",
      "message": "Here is my own description",
      "print": "Print",
      "save": "Save",
    },
    {
      "agree": "J'accepte",
      "disagree": "Je refuse",
      "lang": "fr-FR",
      "languageName": "Français",
      "message": "Voici ma propre description (éàè)",
      "print": "Imprimer",
      "save": "Sauvegarder",
    },
    {
      "agree": "同意する",
      "disagree": "同意しない",
      "lang": "ja-JP",
      "languageName": "日本語",
      "message": "ここに私の説明があります",
      "print": "印刷する",
      "save": "セーブ",
    },
    {
      "agree": "한국어",
      "disagree": "동의하지 않는다",
      "lang": "ko-KR",
      "languageName": "한국어",
      "message": "여기에 내 설명이있다.",
      "print": "인쇄",
      "save": "구하다",
    },
  ],
}
`;

exports[`dmg > license buttons config 2`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > license buttons config 3`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > license en 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > license en 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > license ja 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > license ja 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > license rtf 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > license rtf 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > multi language license 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > multi language license 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > no background 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "NoBackground-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "NoBackground-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > no background 2`] = `
{
  "CFBundleDisplayName": "NoBackground",
  "CFBundleExecutable": "NoBackground",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "NoBackground",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > no build directory 1`] = `
[
  {
    "x": 130,
    "y": 220,
  },
  {
    "path": "/Applications",
    "type": "link",
    "x": 410,
    "y": 220,
  },
]
`;

exports[`dmg > no build directory 2`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "NoBuildDirectory-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "NoBuildDirectory-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > no build directory 3`] = `
{
  "CFBundleDisplayName": "NoBuildDirectory",
  "CFBundleExecutable": "NoBuildDirectory",
  "CFBundleIconFile": "electron.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "NoBuildDirectory",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > retina background as 2 png 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > retina background as 2 png 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`dmg > unset dmg icon 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test ß No Volume Icon-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test ß No Volume Icon-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`dmg > unset dmg icon 2`] = `
{
  "CFBundleDisplayName": "Test ß No Volume Icon",
  "CFBundleExecutable": "Test ß No Volume Icon",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test ß No Volume Icon",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`retina background as 2 png 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`retina background as 2 png 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;
